--- a/fraimwork на минималках/index.html
+++ b/fraimwork на минималках/index.html
@@ -17,6 +17,12 @@
 <script src="js/components/Header/headerTemplate.js"></script>
 <script src="js/components/Calculator/CalculatorComponent.js"></script>
 <script src="js/components/Calculator/calculatorTemplate.js"></script>
+<script src="js/components/Calculator/UI/UIComponentCalc.js"></script>
+<script src="js/components/Calculator/UI/uiTemplate.js"></script>
+<script src="js/components/Calculator/complex.js"></script>
+<script src="js/components/Calculator/ComplexCalculator.js"></script>
+<script src="js/components/Calculator/RealCalculator.js"></script>
+
 <script src="js/components/Graph2D/Canvas.js"></script>
 <script src="js/components/Graph2D/UI/uiTemplate.js"></script>
 <script src="js/components/Graph2D/UI/UIComponent.js"></script>
